--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -13,6 +14,8 @@
     <link href="./CSS/Normalize.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover.css" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/media.css">
 
@@ -56,7 +59,7 @@
                 </ul>
                 <span class="navbar-text d-grid gap-2 mx-2 newsletter d-none d-lg-grid">
 
-                    <button type="button" class="btn btn-large"  data-bs-toggle="modal" data-bs-target="#newsletterModal">newsletter</button>
+                    <button type="button" class="btn btn-large hvr-shutter-in-vertical"  data-bs-toggle="modal" data-bs-target="#newsletterModal">newsletter</button>
                 </span>
 
             </div>
@@ -66,17 +69,16 @@
     <!--end navbar-->
     <!--start header-->
     <header class="container-fluid position-relative">
-        <div class="overlay d-flex justify-content-center align-items-center">
+        <div class="overlay d-flex justify-content-center align-items-center wow animate__backInDown" data-wow-duration="2s">
             <img src="./imgs/logoheader.svg" class="img-responsive img-fluid" alt="sliderLogo">
         </div>
     </header>
-
     <!--About section -->
 
     <section class="About">
         <div class="container-lg">
             <div class="row">
-                <div class="col-md-7 col-lg-6">
+                <div class="col-md-7 col-lg-6  wow animate__fadeInLeft" data-wow-duration="2.5s">
                     <h2>About CAT Reloaded?</h2>
                     <p class="lead py-3 pb-md-0">
                         CAT
@@ -87,65 +89,64 @@
                        Read More ...
                     </a>
                 </div>
-                <div class="col-md-5 justify-content-center d-none d-md-flex col-lg-6">
-                    <img src="./imgs/Vector.svg" class="img-responsive img-fluid" alt="About Cat Reloaded ">
+                <div class="col-md-5 justify-content-center d-none d-md-flex col-lg-6 wow animate__fadeInRight" data-wow-duration="2s">
+                    <img src="./imgs/Vector.svg " class="img-responsive img-fluid " alt="About Cat Reloaded ">
                 </div>
             </div>
         </div>
     </section>
 
     <!--achievments section -->
-
     <section class="ourachievments">
-        <div class="container-lg justify-content-center">
-            <h2>
+        <div class="container-lg justify-content-center  ">
+            <h2 class=" wow animate__slideInDown" data-wow-duration="1.5s">
                 More than 25 years of CATian
             </h2>
-            <div class="row pt-5 pb-3">
-                <div class=" col-4 col-md-2 col-lg-2">
+            <div class="row pt-5 pb-3 wow animate__fadeInUp" data-wow-duration="2.5s">
+                <div class=" col-4 col-md-2 col-lg-2 ">
                     <ul class="list-unstyled d-flex justify-content-center flex-column gap-1 align-items-center ">
-                        <li> <i class="fas fa-video"></i></li>
-                        <li> <span data-count="15">15</span>K</li>
+                        <li> <i class="fas fa-video "></i></li>
+                        <li> <span data-count="15 ">15</span>K</li>
                         <li>Views</li>
                     </ul>
                 </div>
 
-                <div class=" col-4 col-md-2 col-lg-2">
+                <div class=" col-4 col-md-2 col-lg-2 ">
                     <ul class="list-unstyled d-flex justify-content-center flex-column gap-1 align-items-center ">
-                        <li> <i class="fas fa-users"></i></li>
-                        <li> <span data-count="7">7</span>K</li>
+                        <li> <i class="fas fa-users "></i></li>
+                        <li> <span data-count="7 ">7</span>K</li>
                         <li>Audience</li>
                     </ul>
                 </div>
 
-                <div class=" col-4 col-md-2 col-lg-2">
+                <div class=" col-4 col-md-2 col-lg-2 ">
                     <ul class="list-unstyled d-flex justify-content-center flex-column gap-1 align-items-center ">
-                        <li> <i class="fas fa-map-marker-alt"></i></li>
-                        <li> <span data-count="50">50</span>+</li>
+                        <li> <i class="fas fa-map-marker-alt "></i></li>
+                        <li> <span data-count="50 ">50</span>+</li>
                         <li>Workshops</li>
                     </ul>
                 </div>
 
-                <div class=" col-4 col-md-2 col-lg-2">
+                <div class=" col-4 col-md-2 col-lg-2 ">
                     <ul class="list-unstyled d-flex justify-content-center flex-column gap-1 align-items-center ">
-                        <li><i class="fas fa-code-branch"></i></li>
-                        <li> <span data-count="5">5</span>+</li>
+                        <li><i class="fas fa-code-branch "></i></li>
+                        <li> <span data-count="5 ">5</span>+</li>
                         <li>Projects</li>
                     </ul>
                 </div>
 
-                <div class=" col-4 col-md-2 col-lg-2">
+                <div class=" col-4 col-md-2 col-lg-2 ">
                     <ul class="list-unstyled d-flex justify-content-center flex-column gap-1 align-items-center ">
-                        <li><i class="fas fa-calendar-alt"></i></li>
-                        <li> <span data-count="50">50</span>+</li>
+                        <li><i class="fas fa-calendar-alt "></i></li>
+                        <li> <span data-count="50 ">50</span>+</li>
                         <li>Events</li>
                     </ul>
                 </div>
 
-                <div class=" col-4 col-md-2 col-lg-2">
+                <div class=" col-4 col-md-2 col-lg-2 ">
                     <ul class="list-unstyled d-flex justify-content-center flex-column gap-1 align-items-center ">
-                        <li> <img src="./imgs/session.svg" alt="sessions"></li>
-                        <li> <span data-count="200">200</span>+</li>
+                        <li> <img src="./imgs/session.svg " alt="sessions "></li>
+                        <li> <span data-count="200 ">200</span>+</li>
                         <li>Sessions</li>
                     </ul>
                 </div>
@@ -160,9 +161,9 @@
     <section class="ourevents">
 
         <div class="container-sm">
-            <h2>Our Events</h2>
+            <h2 class=" wow animate__slideInDown" data-wow-duration="1.5s">Our Events</h2>
             <div class="row justify-content-center">
-                <div class="col-md-10 col-lg-11 col-xl-10">
+                <div class="col-md-10 col-lg-11 col-xl-10  wow animate__slideInLeft" data-wow-duration="2.5s">
                     <div id="events" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#events" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -170,8 +171,8 @@
                             <button type="button" data-bs-target="#events" data-bs-slide-to="2" aria-label="Slide 3"></button>
                         </div>
                         <div class="carousel-inner">
-                            <div class="carousel-item active " data-bs-interval="2000">
-                                <div class="card">
+                            <div class="carousel-item active" data-bs-interval="2000">
+                                <div class="card hvr-curl-top-left">
                                     <div class="row g-0">
                                         <div class="col-md-12 col-lg-4">
                                             <img src="./imgs/event3.jpg" class="img-fluid rounded" alt="event1">
@@ -200,7 +201,7 @@
                             </div>
 
                             <div class="carousel-item " data-bs-interval="2000">
-                                <div class="card">
+                                <div class="card hvr-curl-top-left">
                                     <div class="row g-0">
                                         <div class="col-md-12 col-lg-4">
                                             <img src="./imgs/UpEventcover.png" class="img-fluid rounded" alt="event2">
@@ -229,7 +230,7 @@
                             </div>
 
                             <div class="carousel-item" data-bs-interval="2000">
-                                <div class="card">
+                                <div class="card hvr-curl-top-left">
                                     <div class="row g-0">
                                         <div class="col-md-12 col-lg-4">
                                             <img src="./imgs/event1.png" class="img-fluid rounded" alt="event3">
@@ -274,9 +275,9 @@
     <section class="lastProjects">
 
         <div class="container-sm">
-            <h2>Last Projects</h2>
-            <div class="row justify-content-center">
-                <div class="col-md-10 col-lg-11 col-xl-10">
+            <h2 class=" wow animate__slideInDown" data-wow-duration="1.5s">Last Projects</h2>
+            <div class="row justify-content-center ">
+                <div class="col-md-10 col-lg-11 col-xl-10 wow animate__slideInRight" data-wow-duration="2.5s">
                     <div id="latestProject" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#latestProject" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -284,7 +285,7 @@
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active " data-bs-interval="2000">
-                                <div class="card">
+                                <div class="card hvr-curl-top-left">
 
                                     <div class="row g-0">
                                         <div class="col-md-12 col-lg-4">
@@ -318,7 +319,7 @@
                             </div>
 
                             <div class="carousel-item " data-bs-interval="2000">
-                                <div class="card">
+                                <div class="card hvr-curl-top-left">
                                     <div class="row g-0">
                                         <div class="col-md-12 col-lg-4">
                                             <img src="./imgs/kawen.png" class="img-fluid rounded" alt="project2">
@@ -359,9 +360,9 @@
     <!--Sponsors section-->
     <section class="sponsors">
 
-        <h2>Our Sponsors</h2>
+        <h2 class=" wow animate__slideInDown" data-wow-duration="1.5s">Our Sponsors</h2>
         <div class="container-sm">
-            <div class="row d-flex justify-content-center">
+            <div class="row d-flex justify-content-center wow animate__fadeInUpBig" data-wow-duration="2.5s">
 
                 <div class="col-md-10">
 
@@ -497,6 +498,10 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/wow.min.js "></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
