--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!--end navbar-->
     <!--start header-->
     <header class="container-fluid position-relative">
-        <div class="overlay d-flex justify-content-center align-items-center wow animate__backInDown" data-wow-duration="2s">
+        <div class="overlay d-flex justify-content-center align-items-center wow animate__backInUp" data-wow-duration="1s">
             <img src="./imgs/logoheader.svg" class="img-responsive img-fluid" alt="sliderLogo">
         </div>
     </header>
@@ -78,18 +78,18 @@
     <section class="About">
         <div class="container-lg">
             <div class="row">
-                <div class="col-md-7 col-lg-6  wow animate__fadeInLeft" data-wow-duration="2.5s">
+                <div class="col-md-7 col-lg-6  wow animate__fadeInLeft" data-wow-duration="1.5s">
                     <h2>About CAT Reloaded?</h2>
                     <p class="lead py-3 pb-md-0">
                         CAT
                         <q>a non-profit foundation focused on</q>. Computer Science and IT specially Open Source technologies. CAT's primary goal was to create an IT community in Mansoura University that is dynamic, innovative and highly scalable for
                         the undergraduate computer engineering/science students, that would help them achieve a good level of technical proficiency through projects and seminars.
                     </p>
-                    <a class="btn outline-cat-button">
+                    <a class="btn outline-cat-button ">
                        Read More ...
                     </a>
                 </div>
-                <div class="col-md-5 justify-content-center d-none d-md-flex col-lg-6 wow animate__fadeInRight" data-wow-duration="2s">
+                <div class="col-md-5 justify-content-center d-none d-md-flex col-lg-6 wow animate__fadeInRight" data-wow-duration="1.5s">
                     <img src="./imgs/Vector.svg " class="img-responsive img-fluid " alt="About Cat Reloaded ">
                 </div>
             </div>
@@ -99,10 +99,10 @@
     <!--achievments section -->
     <section class="ourachievments">
         <div class="container-lg justify-content-center  ">
-            <h2 class=" wow animate__slideInDown" data-wow-duration="1.5s">
+            <h2 class=" wow animate__slideInDown" data-wow-duration="1s">
                 More than 25 years of CATian
             </h2>
-            <div class="row pt-5 pb-3 wow animate__fadeInUp" data-wow-duration="2.5s">
+            <div class="row pt-5 pb-3 wow animate__fadeInUp" data-wow-duration="1.5s">
                 <div class=" col-4 col-md-2 col-lg-2 ">
                     <ul class="list-unstyled d-flex justify-content-center flex-column gap-1 align-items-center ">
                         <li> <i class="fas fa-video "></i></li>
@@ -161,9 +161,9 @@
     <section class="ourevents">
 
         <div class="container-sm">
-            <h2 class=" wow animate__slideInDown" data-wow-duration="1.5s">Our Events</h2>
+            <h2>Our Events</h2>
             <div class="row justify-content-center">
-                <div class="col-md-10 col-lg-11 col-xl-10  wow animate__slideInLeft" data-wow-duration="2.5s">
+                <div class="col-md-10 col-lg-11 col-xl-10">
                     <div id="events" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#events" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -275,9 +275,9 @@
     <section class="lastProjects">
 
         <div class="container-sm">
-            <h2 class=" wow animate__slideInDown" data-wow-duration="1.5s">Last Projects</h2>
+            <h2>Last Projects</h2>
             <div class="row justify-content-center ">
-                <div class="col-md-10 col-lg-11 col-xl-10 wow animate__slideInRight" data-wow-duration="2.5s">
+                <div class="col-md-10 col-lg-11 col-xl-10 ">
                     <div id="latestProject" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#latestProject" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -360,9 +360,9 @@
     <!--Sponsors section-->
     <section class="sponsors">
 
-        <h2 class=" wow animate__slideInDown" data-wow-duration="1.5s">Our Sponsors</h2>
+        <h2 class=" wow animate__fadeInDownBig" data-wow-duration="1s">Our Sponsors</h2>
         <div class="container-sm">
-            <div class="row d-flex justify-content-center wow animate__fadeInUpBig" data-wow-duration="2.5s">
+            <div class="row d-flex justify-content-center wow animate__fadeInUpBig" data-wow-duration="1.5s">
 
                 <div class="col-md-10">
 
