--- a/About.html
+++ b/About.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="CAT Reloaded Team in Mansoura University">
     <link rel="icon" type="image/png" sizes="16x16" href="imgs/titleCatLogo.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Poppins:wght@400;500&family=Raleway:wght@700&display=swap" rel="stylesheet">
+
+    <link href="./CSS/Normalize.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/media.css">
@@ -68,12 +71,12 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-5 col-sm-6 d-flex flex-column gap-2 justify-content-center">
-                    <img class="img-responsive align-self-center" src="./imgs/catLogo.svg" alt="catlogo">
-                    <h1> <span>About</span> CAT </h1>
+                <div class="col-5 col-sm-6 d-flex flex-column gap-2 justify-content-center wow">
+                    <img class="img-responsive align-self-center wow animate__slideInDown" src="./imgs/catLogo.svg" alt="catlogo" data-wow-duration="1.5s">
+                    <h1 class="wow animate__slideInUp" data-wow-duration="1.5s"> <span>About</span> CAT </h1>
                 </div>
-                <div class="col-6 d-flex flex-column gap-2 justify-content-center">
-                    <img class="img-responsive align-self-center img-fluid" src="./imgs/about-us.svg" alt="...">
+                <div class="col-6 d-flex flex-column gap-2 justify-content-center wow" data-wow-duration="1.5s">
+                    <img class="img-responsive align-self-center img-fluid wow animate__slideInUp" src="./imgs/about-us.svg" alt="..." data-wow-duration="1.5s">
                 </div>
             </div>
         </div>
@@ -85,13 +88,13 @@
     <section class="About History">
         <div class="container-lg">
             <div class="row">
-                <div class="col-md-9 col-lg-8">
+                <div class="col-md-9 col-lg-8 wow animate__slideInLeft" data-wow-duration="1.5s">
                     <h2>Our History</h2>
                     <p class="lead py-3 pb-md-0">
                         CAT Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut nim ad minim veniam, quiepakis nostrud exercitation ullamco laboris nsi ut aliquip ex ea comepmodo consetquat. Duis aute
                         irure dolor in reprehenderit in voluptate velit esse cfgillum dolore eutpe fugiat nulla pariatur. Excepteur sint occaecat</p>
                 </div>
-                <div class="col-md-3 justify-content-center d-none d-md-flex col-lg-4 py-3">
+                <div class="col-md-3 justify-content-center d-none d-md-flex col-lg-4 py-3 wow animate__slideInRight" data-wow-duration="1.5s">
                     <img src="./imgs/Group 971.svg" class="img-responsive img-fluid" alt="CAT Reloaded Vector">
                 </div>
             </div>
@@ -104,11 +107,11 @@
     <section class="About History Mission">
         <div class="container-lg">
             <div class="row">
-                <div class="col-md-3 justify-content-center d-none d-md-flex col-lg-4 py-3">
+                <div class="col-md-3 justify-content-center d-none d-md-flex col-lg-4 py-3  wow animate__slideInLeft" data-wow-duration="1.5s">
                     <img src="./imgs/Group 1013.svg" class="img-responsive img-fluid" alt="CAT Reloaded Vector">
                 </div>
 
-                <div class="col-md-9 col-lg-8">
+                <div class="col-md-9 col-lg-8  wow animate__slideInRight" data-wow-duration="1.5s">
                     <h2>Our Mission & Vision</h2>
                     <p class="lead py-3 pb-md-0">
                         CAT Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut nim ad minim veniam, quiepakis nostrud exercitation ullamco laboris nsi ut aliquip ex ea comepmodo consetquat. Duis aute
@@ -123,8 +126,8 @@
 
     <section class="About History Hierarchy">
         <div class="container">
-            <h2>Our Hierarchy</h2>
-            <div class="row justify-content-center">
+            <h2 class="wow animate__fadeIn" data-wow-duration="1.5s">Our Hierarchy</h2>
+            <div class="row justify-content-center wow animate__fadeIn" data-wow-duration="1.5s">
                 <ul class="col-6 col-md-6 col-lg-3  list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
@@ -181,7 +184,7 @@
 
 
             </div>
-            <div class="row justify-content-center">
+            <div class="row justify-content-center wow animate__fadeIn" data-wow-duration="1.5s">
                 <ul class=" col-6 col-lg-5 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
@@ -207,7 +210,7 @@
                 </ul>
             </div>
 
-            <div class="row justify-content-around">
+            <div class="row justify-content-around wow animate__fadeIn" data-wow-duration="1.5s">
                 <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
@@ -473,7 +476,10 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script src="./js/shared.js"></script>
-
+    <script src="./js/wow.min.js "></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
