--- a/ContactUs.html
+++ b/ContactUs.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="CAT Reloaded Team in Mansoura University">
     <link rel="icon" type="image/png" sizes="16x16" href="imgs/titleCatLogo.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Poppins:wght@400;500&family=Raleway:wght@700&display=swap" rel="stylesheet">
@@ -13,6 +12,9 @@
     <link href="./CSS/Normalize.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover.css" rel="stylesheet">
+
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/media.css">
 
@@ -71,11 +73,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-5 col-sm-6 d-flex flex-column gap-2 justify-content-center">
-                    <img class="img-responsive align-self-center" src="./imgs/catLogo.svg" alt="catlogo">
-                    <h1> <span>Contact Us</span></h1>
+                    <img class="img-responsive align-self-center  wow animate__slideInDown" src="./imgs/catLogo.svg" alt="catlogo" data-wow-duration="1.5s">
+                    <h1 class="wow animate__slideInUp" data-wow-duration="1.5s"> <span>Contact Us</span></h1>
                 </div>
                 <div class="col-6 d-flex flex-column gap-2 justify-content-center">
-                    <img class="img-responsive align-self-center img-fluid" src="./imgs/undraw_contact_us_15o2 (1).svg" alt="...">
+                    <img class="img-responsive align-self-center img-fluid  wow animate__slideInUp" src="./imgs/undraw_contact_us_15o2 (1).svg" alt="..." data-wow-duration="1.5s">
                 </div>
             </div>
         </div>
@@ -86,10 +88,10 @@
     <!--section of Contactus-->
     <section class="contactus">
         <div class="container">
-            <h2>Write To Us</h2>
+            <h2 class=" wow animate__fadeIn" data-wow-duration="1.5s">Write To Us</h2>
             <div class="row justify-content-center align-items-center">
 
-                <form class="form-horizontal col-md-10 col-lg-8">
+                <form class="form-horizontal col-md-10 col-lg-8  wow animate__fadeIn" data-wow-duration="1.5s">
                     <div class="row">
                         <div class="mb-3">
                             <input type="text" class="form-control" placeholder="Full Name" required>
@@ -231,6 +233,10 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script src="./js/shared.js"></script>
+    <script src="./js/wow.min.js "></script>
+    <script>
+        new WOW().init();
+    </script>
 
 
 </body>
