--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
     <section class="ourevents">
 
         <div class="container-sm">
-            <h2>Our Events</h2>
+            <h2 class=" wow animate__fadeInLeft" data-wow-duration="1.5s">Our Events</h2>
             <div class="row justify-content-center">
-                <div class="col-md-10 col-lg-11 col-xl-10">
+                <div class="col-md-10 col-lg-11 col-xl-10  wow animate__fadeInLeft" data-wow-duration="1.5s">
                     <div id="events" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#events" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -275,9 +275,9 @@
     <section class="lastProjects">
 
         <div class="container-sm">
-            <h2>Last Projects</h2>
+            <h2 class=" wow animate__fadeInLeft" data-wow-duration="1.5s">Last Projects</h2>
             <div class="row justify-content-center ">
-                <div class="col-md-10 col-lg-11 col-xl-10 ">
+                <div class="col-md-10 col-lg-11 col-xl-10  wow animate__fadeInLeft" data-wow-duration="1.5s">
                     <div id="latestProject" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#latestProject" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
