--- a/About.html
+++ b/About.html
@@ -185,7 +185,7 @@
 
             </div>
             <div class="row justify-content-center wow animate__fadeIn" data-wow-duration="1.5s">
-                <ul class=" col-6 col-lg-5 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-lg-5 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
 
@@ -197,7 +197,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-lg-6 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-lg-6 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -211,7 +211,7 @@
             </div>
 
             <div class="row justify-content-around wow animate__fadeIn" data-wow-duration="1.5s">
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -222,7 +222,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -233,7 +233,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -244,7 +244,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -256,7 +256,7 @@
                     </li>
                 </ul>
 
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -267,7 +267,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -278,7 +278,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -289,7 +289,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -300,7 +300,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -311,7 +311,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -322,7 +322,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -333,7 +333,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -344,7 +344,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-lg-5 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-lg-5 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -355,7 +355,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-lg-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <ul class=" col-6 col-lg-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center  wow animate__fadeIn" data-wow-duration="1.5s">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
