--- a/index.html
+++ b/index.html
@@ -360,9 +360,9 @@
     <!--Sponsors section-->
     <section class="sponsors">
 
-        <h2 class=" wow animate__fadeInDownBig" data-wow-duration="1s">Our Sponsors</h2>
+        <h2 class=" wow animate__fadeInDown" data-wow-duration="1s">Our Sponsors</h2>
         <div class="container-sm">
-            <div class="row d-flex justify-content-center wow animate__fadeInUpBig" data-wow-duration="1.5s">
+            <div class="row d-flex justify-content-center wow animate__fadeInUp" data-wow-duration="1.5s">
 
                 <div class="col-md-10">
 
