--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="imgs/titleCatLogo.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Poppins:wght@400;500&family=Raleway:wght@700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Fruktur&family=Lobster+Two&family=Poppins:wght@400;500&family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Fruktur&family=Lobster+Two&family=Poppins:wght@400;500&family=Raleway:wght@700&family=Ultra&display=swap" rel="stylesheet">
     <link href="./CSS/Normalize.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" rel="stylesheet">
@@ -68,8 +69,8 @@
     </nav>
     <!--end navbar-->
     <!--start header-->
-    <header class="container-fluid position-relative">
-        <div class="overlay d-flex justify-content-center align-items-center wow animate__backInUp" data-wow-duration="1s">
+    <header class="container-fluid position-relative mainheader">
+        <div class="overlay d-flex justify-content-center align-items-center wow " data-wow-duration="1s">
             <img src="./imgs/logoheader.svg" class="img-responsive img-fluid" alt="sliderLogo">
         </div>
     </header>
@@ -78,7 +79,7 @@
     <section class="About">
         <div class="container-lg">
             <div class="row">
-                <div class="col-md-7 col-lg-6  wow animate__fadeInLeft" data-wow-duration="1.5s">
+                <div class="col-md-7 col-lg-6  wow leftanimate" data-wow-duration="1.5s">
                     <h2>About CAT Reloaded?</h2>
                     <p class="lead py-3 pb-md-0">
                         CAT
@@ -490,6 +491,37 @@
 
         </div>
     </div>
+
+    <!--loader
+    <section class="spinner-container">
+        <div class="spinner"><span class="spinner__leter" letter="C">C</span><span class="spinner__leter" letter="A">A</span><span class="spinner__leter" letter="T">T</span><span class="spinner__leter" letter=" "> </span><span class="spinner__leter" letter="R">R</span>
+            <span
+                class="spinner__leter" letter="E">E</span><span class="spinner__leter" letter="L">L</span><span class="spinner__leter" letter="O">O</span><span class="spinner__leter" letter="A">A</span><span class="spinner__leter" letter="D">D</span><span class="spinner__leter" letter="E">E</span>
+                <span
+                    class="spinner__leter" letter="D">D</span>
+        </div>
+    </section>
+-->
+
+    <section class="loader">
+        <img src="imgs/catBlack.svg" class="animate__bounceInDown wow " data-wow-duration="3s">
+
+        <div class="loading loading01">
+            <span class="wow animate__zoomOutRight" data-wow-duration="2s">C</span>
+            <span class="wow animate__zoomOutRight" data-wow-duration="2s">A</span>
+            <span class="wow animate__zoomOutRight" data-wow-duration="2s">T</span>
+            <span class="wow animate__zoomOutRight" data-wow-duration="2s">R</span>
+            <span class="wow animate__zoomOutRight" data-wow-duration="2s">e</span>
+            <span class="wow animate__zoomOutRight" data-wow-duration="2s">l</span>
+            <span class="wow animate__zoomOutRight" data-wow-duration="2s">o</span>
+            <span class="wow animate__zoomOutRight" data-wow-duration="2s">d</span>
+            <span class="wow animate__zoomOutRight" data-wow-duration="2s">e</span>
+            <span class="wow animate__zoomOutRight" data-wow-duration="2s">d</span>
+
+        </div>
+    </section>
+
+
 
     <button type="button" class="btn btn-floating btn-md" id="btn-back-to-top">
   <i class="fas fa-arrow-up"></i>
